<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/Instrucciones"
        android:title="@string/Instrucciones">
    </item>

    <item
        android:id="@+id/NuevoJuego"
        android:title="@string/NuevoJuego">
    </item>

    <item
        android:id="@+id/Configuracion"
        android:title="@string/Configuracion">
    </item>

    <item
        android:id="@+id/SeleccionPersonaje"
        android:title="@string/SeleccionPersonaje">

    </item>

    <item
        android:id="@+id/BotonPersonaje"
        android:icon="@mipmap/toad_fumon_foreground"
        android:title="@string/BotonPersonaje"
        app:actionButtonStyle="?android:attr/actionButtonStyle"
        app:showAsAction="always" />

</menu>